--- a/package.json
+++ b/package.json
@@ -30,6 +30,16 @@
     "day12",
     "day13",
     "day14",
-    "day15"
+    "day15",
+    "day16",
+    "day17",
+    "day18",
+    "day19",
+    "day20",
+    "day21",
+    "day22",
+    "day23",
+    "day24",
+    "day25"
   ]
 }
